--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ShoppingList"
         tools:targetApi="31">
+
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value = "AIzaSyDMVriPhRY7xJyxoRCwZexbXQ1YPBmZRFY"
+            />
         <activity
             android:name=".MainActivity"
             android:exported="true"
